# ffmpeg-learn

./: .gitignore
2-PrintLog/: CMakeLists.txt
2-PrintLog/src/: main.cpp
3-MediaInfo/: CMakeLists.txt
3-MediaInfo/src/: main.cpp
4-Remuxing/: CMakeLists.txt
4-Remuxing/src/: main.cpp
